# KMIDS-GFM-Future-Engineer-2025

./: .clang-format  .gitignore  .gitmodules  README.md
Cura-Files/Ender_3_V3_KE/: CE3V3KE_AxleHolder_3x.3mf  CE3V3KE_AxleHolder_MotorHolder.3mf  CE3V3KE_BackWheelStuff.3mf  CE3V3KE_FrontCover_1x.3mf  CE3V3KE_Linkages.3mf
Cura-Files/Ender_3_V3_KE/cura_profiles/: Ender_3_KE_eSun_PLA+_High_Quality_0.10mm_Accel.curaprofile  Ender_3_V3_KE_eSun_PLA+_Standard_Quality_0.20mm_Accel.curaprofile
Cura-Files/Ender_3_V3_KE/gcode-files/: CE3V3KE_AxleHolder_3x.gcode  CE3V3KE_AxleHolder_MotorHolder.gcode  CE3V3KE_BackWheelStuff.gcode  CE3V3KE_FrontCover_1x.gcode  CE3V3KE_Linkages.gcode  CE3V3KE_MotorGear_1x.gcode
FreeCAD-Files/: MainAssembly.FCStd
FreeCAD-Files/Assembly/: FrontAssembly.FCStd  MainAssembly.FCStd
FreeCAD-Files/Assembly/mesh_export/: BackWheelConnector_2x.stl  Chassis_1x.stl  FrontCover_1x.stl  FrontWheelAxleLeft_1x.stl  FrontWheelAxleRight_1x.stl  LidarPlate_1x.stl  MotorHolder_1x.stl  MotorPlate_1x.stl  TBoneLinkageBottom_1x.stl  TBoneLinkageTop_1x.stl  TransferLinkageLeft_1x.stl  WheelLinkageBottomLeft_1x.stl  WheelLinkageBottomRight_1x.stl  WheelLinkageTopLeft_1x.stl  WheelLinkageTopRight_1x.stl
FreeCAD-Files/Models/: SteeringAckermannModel.FCStd
FreeCAD-Files/Parts/: AxleHolder.FCStd  BackWheelAxle.FCStd  BackWheelConnector.FCStd  BackWheelStopper.FCStd  Chassis.FCStd  FrontCover.FCStd  FrontWheelStopper.FCStd  LegoBevelGear.FCStd  LegoDifferentialGear.FCStd  LidarPlate.FCStd  MotorGear.FCStd  MotorHolder.FCStd  MotorPlate.FCStd  N20Motor.FCStd  RPLidarC1.FCStd  RaspberryPi5M2Hat.FCStd  RaspberryPiUpsHat.FCStd  RpiCamera.FCStd  S0004m.FCStd  Wheel.FCStd
FreeCAD-Files/Parts/FrontWheelAxle/: FrontWheelAxleLeft.FCStd  FrontWheelAxleRight.FCStd
FreeCAD-Files/Parts/TBoneLinkage/: TBoneLinkageBottom.FCStd  TBoneLinkageTop.FCStd
FreeCAD-Files/mesh_export/: BackWheelStopper_2x.stl  FrontCover_1x.stl  FrontWheelAxleLeft_1x.stl  FrontWheelAxleRight_1x.stl  FrontWheelStopper_2x.stl  LidarPlate_1x.stl  MotorPlate_1x.stl  TBoneLinkageBottom_1x.stl  TBoneLinkageTop_1x.stl  TransferLinkageLeft_1x.stl  TransferLinkageRight_1x.stl  WheelLinkageBottomLeft_1x.stl  WheelLinkageBottomRight_1x.stl  WheelLinkageTopLeft_1x.stl  WheelLinkageTopRight_1x.stl
Slicer-Files/Bambu_Lab_P1S_(Bambu_Slicer)/: Chassis_1x.3mf
Slicer-Files/Ender_3_V3_KE_(Cura_Slicer)/: CE3V3KE_AxleHolder_MotorHolder.3mf  CE3V3KE_BackWheelStuff.3mf  CE3V3KE_LidarPlate_1x.3mf  CE3V3KE_MotorPlate_1x.3mf
code/raspberry-pi-5/: CMakeLists.txt  build.sh
code/raspberry-pi-5/apps/challenges/open_challenge/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/log_viewer/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/scan_map_inner/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/scan_map_outer/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/test_camera/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/test_i2c/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/test_lidar/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/test_lidar_cam/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/scripts/: check_battery_status.py  shutdown.sh  ups_shutdown.py
code/raspberry-pi-5/src/i2c_master/: CMakeLists.txt  i2c_master.cpp  i2c_master.h
code/raspberry-pi-5/src/modules/: CMakeLists.txt  camera_module.cpp  camera_module.h  lidar_module.cpp  lidar_module.h
code/raspberry-pi-5/src/modules/camera/: CMakeLists.txt  camera_module.cpp  camera_module.h
code/raspberry-pi-5/src/modules/i2c_master/: CMakeLists.txt  i2c_master.cpp  i2c_master.h
code/raspberry-pi-5/src/modules/lidar/: CMakeLists.txt
code/raspberry-pi-5/src/modules/pico2/: CMakeLists.txt  pico2_module.cpp  pico2_module.h
code/raspberry-pi-5/src/processors/: CMakeLists.txt  camera_processor.cpp  camera_processor.h  lidar_processor.cpp  lidar_processor.h
code/raspberry-pi-5/src/processors/camera/: CMakeLists.txt  camera_processor.cpp  camera_processor.h
code/raspberry-pi-5/src/processors/combined/: CMakeLists.txt  combined_processor.cpp  combined_processor.h
code/raspberry-pi-5/src/processors/lidar/: CMakeLists.txt  lidar_processor.cpp  lidar_processor.h
code/raspberry-pi-5/src/processors/pico2/: CMakeLists.txt  pico2_processor.cpp  pico2_processor.h
code/raspberry-pi-5/src/types/: camera_struct.h  imu_struct.h  lidar_struct.h  pico2_struct.h  robot_pose_struct.h
code/raspberry-pi-5/src/utils/: CMakeLists.txt  direction.h  log_reader.cpp  ring_buffer.hpp
code/raspberry-pi-5/src/utils/direction/: CMakeLists.txt
code/raspberry-pi-5/src/utils/log_reader/: CMakeLists.txt  log_reader.h
code/raspberry-pi-5/src/utils/logger/: CMakeLists.txt  logger.cpp  logger.h
code/raspberry-pi-5/src/utils/pid_controller/: CMakeLists.txt  pid_controller.cpp  pid_controller.h
code/raspberry-pi-5/src/utils/ring_buffer/: CMakeLists.txt
code/raspberry-pi-pico-2/: CMakeLists.txt  build.sh
code/raspberry-pi-pico-2/src/: main.cpp
code/raspberry-pi-pico-2/src/controllers/: CMakeLists.txt  bno085_controller.h  encoder_controller.cpp  encoder_controller.h  motor_controller.cpp  motor_controller.h  motor_speed_controller.cpp
code/raspberry-pi-pico-2/src/i2c_slave/: i2c_slave.h
code/raspberry-pi-pico-2/src/modules/controllers/: bno085_controller.cpp  bno085_controller.h  motor_controller.cpp  motor_controller.h  motor_speed_controller.h
code/raspberry-pi-pico-2/src/modules/controllers/bno085/: CMakeLists.txt  bno085_controller.cpp  bno085_controller.h
code/raspberry-pi-pico-2/src/modules/controllers/motor/: CMakeLists.txt  encoder_controller.cpp  encoder_controller.h  motor_controller.cpp  motor_controller.h  motor_speed_controller.cpp  motor_speed_controller.h
code/raspberry-pi-pico-2/src/modules/controllers/servo/: CMakeLists.txt  servo_controller.cpp  servo_controller.h
code/raspberry-pi-pico-2/src/modules/i2c_slave/: CMakeLists.txt  i2c_slave.cpp  i2c_slave.h
code/raspberry-pi-pico-2/src/utils/: CMakeLists.txt
code/shared/i2c/: pico_i2c_mem_addr.h
docs/: dhcp-server-on-ethernet-port.md  image-drive-linux.md
(+11 files in other folders)
